Use Java 15 with preview by default
This commit enables Java 15 to use `switch with expression` and replace
lombok with `record`