@@ -4,16 +4,25 @@ plugins {
 
 group 'com.romanwuattier'
 version '1.0-SNAPSHOT'
-sourceCompatibility = '11'
-targetCompatibility = 11
+sourceCompatibility = '15'
+targetCompatibility = 15
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    compileOnly 'org.projectlombok:lombok:1.18.16'
-    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+tasks.withType(JavaCompile).all {
+    options.compilerArgs += ['--enable-preview']
+}
 
+tasks.withType(Test).all {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
